--- a/Superheroes/app/views/pages/batman.html.erb
+++ b/Superheroes/app/views/pages/batman.html.erb
@@ -1,6 +1,11 @@
-<div class="batman">
+<body background="https://upload.wikimedia.org/wikipedia/en/1/17/Batman-BenAffleck.jpg">
+
 	<div class="container" style="color:yellow; font-size: 40px">
 		<h1>Pages#superman</h1>
 		<p>I am Batman</p>
 	</div>
-</div>
+
+
+</body>
+
+http://www.dccomics.com/sites/default/files/GalleryChar_1920x1080_BM_Cv38_54b5d0d1ada864.04916624.jpg
