--- a/Superheroes/app/views/pages/superman.html.erb
+++ b/Superheroes/app/views/pages/superman.html.erb
@@ -1,4 +1,8 @@
-<div class="batman">
-	<h1>Pages#superman</h1>
-	<p>I am Batman</p>
-</div>
+<body background="http://im.ziffdavisinternational.com/ign_latam/news/s/superman-j/superman-jude-law-tells-stephen-colbert-he-turned-down-role_gyae.png">
+	<div class="container" style="color:purple; font-size: 40px">
+		<h1>Pages#superman</h1>
+		<p>This looks like a job for superman</p>
+	</div>
+</body>
+
+http://i.pmcanal5.com/2017/06/superman-superheroe-aburrido-dia_cover.jpeg
